--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/db_med
 spring.datasource.username=postgres
 spring.datasource.password=eduardo
 
+#spring.datasource.url=jdbc:postgresql://dpg-cl3kceot3kic73dd8cr0-a.oregon-postgres.render.com/db_med
+#spring.datasource.username=eduardo
+#spring.datasource.password=PsdUehZjltGEIdoBCs7uohGLTEXi3oVU
+
 
 # JPA configuration
 spring.jpa.generate-ddl=true
