--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<version>1</version>
 	<name>eduardo_lpsw</name>
 	<description>Proyecto de materia con Spring Boot</description>
-	<packaging>war</packaging>
+	<!-- <packaging>war</packaging> -->
 
 	<properties>
 		<java.version>17</java.version>
@@ -50,11 +50,11 @@
 			<artifactId>tomcat-embed-jasper</artifactId>
 		</dependency>
 
-		<!-- <dependency>
+		<dependency>
 			<groupId>jakarta.persistence</groupId>
 			<artifactId>jakarta.persistence-api</artifactId>
 			<version>3.1.0</version>
-		</dependency> -->
+		</dependency> 
 
 		<dependency>
 			<groupId>jakarta.servlet.jsp.jstl</groupId>
