--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>eduardo_lpsw</name>
 	<description>Proyecto de materia con Spring Boot</description>
 
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<properties>
 		<java.version>17</java.version>
@@ -51,9 +51,9 @@
                 <dependency>
                     <groupId>org.apache.tomcat.embed</groupId>
                     <artifactId>tomcat-embed-jasper</artifactId>
+                    <scope>provided</scope>
                 </dependency>
 
-		<!-- prueba -->
 
 
 
