--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,18 +6,18 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
 # Database configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_med
-spring.datasource.username=postgres
-spring.datasource.password=eduardo
+#spring.datasource.url=jdbc:postgresql://localhost:5432/db_med
+#spring.datasource.username=postgres
+#spring.datasource.password=eduardo
 
-#spring.datasource.url=jdbc:postgresql://dpg-cl3kceot3kic73dd8cr0-a.oregon-postgres.render.com/db_med
-#spring.datasource.username=eduardo
-#spring.datasource.password=PsdUehZjltGEIdoBCs7uohGLTEXi3oVU
+spring.datasource.url=jdbc:postgresql://dpg-cl3kceot3kic73dd8cr0-a.oregon-postgres.render.com/db_med
+spring.datasource.username=eduardo
+spring.datasource.password=PsdUehZjltGEIdoBCs7uohGLTEXi3oVU
 
 
 # JPA configuration
 spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
