Fix last project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,13 @@ spring.mvc.view.suffix=.jsp
 #spring.datasource.username=postgres
 #spring.datasource.password=eduardo
 
-spring.datasource.url=jdbc:postgresql://dpg-cl3kceot3kic73dd8cr0-a.oregon-postgres.render.com/db_med
-spring.datasource.username=eduardo
-spring.datasource.password=PsdUehZjltGEIdoBCs7uohGLTEXi3oVU
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_erp
+spring.datasource.username=administrador
+spring.datasource.password=administrador
+
+#spring.datasource.url=jdbc:postgresql://dpg-cl3kceot3kic73dd8cr0-a.oregon-postgres.render.com/db_med
+#spring.datasource.username=eduardo
+#spring.datasource.password=PsdUehZjltGEIdoBCs7uohGLTEXi3oVU
 
 
 # JPA configuration
