--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,12 @@
                     <version>6.1.2</version>
                 </dependency>
 
+                <dependency>
+                    <groupId>com.cloudinary</groupId>
+                    <artifactId>cloudinary-http44</artifactId>
+                    <version>1.33.0</version>
+                </dependency>
+
             </dependencies>
 
             <build>
