--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>eduardo_lpsw</name>
 	<description>Proyecto de materia con Spring Boot</description>
 
-	<packaging>war</packaging>
+	<!-- <packaging>war</packaging> -->
 
 	<properties>
 		<java.version>17</java.version>
