--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>eduardo_lpsw</name>
 	<description>Proyecto de materia con Spring Boot</description>
 
-	<!-- <packaging>war</packaging> -->
+	 <packaging>war</packaging>
 
 	<properties>
 		<java.version>17</java.version>
@@ -48,12 +48,12 @@
 
 		<!-- eliminar -->
 
-        <!--
+
                 <dependency>
                     <groupId>org.apache.tomcat.embed</groupId>
                     <artifactId>tomcat-embed-jasper</artifactId>
                     <scope>provided</scope>
-                </dependency>  -->
+                </dependency>
 
                 <dependency>
                     <groupId>jakarta.persistence</groupId>
